Added 6DOF landing dispersion with confidence ellipses, and other exported values